--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -1,19 +1,21 @@
-.container{
-    width: 100%;
+.logo{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    margin-left: 3%;
 }
 .headerContainer{
-    display: flex;
-    margin-left: 15%;
-    margin-right: 15%;
-    row-gap: 10%;
+    width: 100%;
+    /* background-color: -webkit-linear-gradient(left,#5e17eb,#25006d); */
+    background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
+
 }
-.blank{
-    display: flex;
-    width: 30%;
-}
-.headerLinks{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-}
+  #footer {
+    background-color: #2c5a96;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    position: fixed;
+    background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
+  }
