--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -5,7 +5,10 @@
     margin-left: 3%;
 }
 .headerContainer{
+    display: flex;
+    justify-content: start;
     width: 100%;
+    height: 8vh;
     /* background-color: -webkit-linear-gradient(left,#5e17eb,#25006d); */
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
 
