--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -4,6 +4,13 @@
     display: flex;
     margin-left: 3%;
 }
+.name{
+  margin-left: 10px;
+  margin-top: 18px;
+  font-family: "Roboto";
+  /* color: ; */
+  
+}
 .headerContainer{
     display: flex;
     justify-content: start;
@@ -13,7 +20,7 @@
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
 
 }
-  #footer {
+  /* #footer {
     background-color: #2c5a96;
     text-align: center;
     width: 100%;
@@ -21,4 +28,26 @@
     bottom: 0;
     position: fixed;
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
+  } */
+  .footerContainer{
+    width: 100%;
+    height: 20vh;
+    bottom: 0;
+    display: flex;
+    background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
+  }
+  .footerContent{
+    display: flex;
+    margin-left: 25px;
+    margin-top: 25px;
+  }
+  .details{
+    margin-top: 0px;
+  }
+  .disclaimer{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    font-size: 10px;
   }
