--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
 .mainContainer{
   display: flex;
 }
+.sidebarContainer{
+  flex: 1 1 auto;
+}
+.pageContainer{
+  flex: 11 1 auto;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
