added applicantlist view

--- a/src/modules/applications/applications.css
+++ b/src/modules/applications/applications.css
@@ -1,2 +1,16 @@
-div{
+.pagename{
+    height: 48px;
+    width: 70%;
+    float: left;
+}
+.pagebutton{
+    height: 48px;
+    width: 30%;
+    float: right;
+    text-align: center;
+    justify-content: center;
+}
+.pagesearch{
+    width: 30%;
+    float: right;
 }
