--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -1,19 +1,27 @@
-
-
 .loginContainer{
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 75vh;
+  height: 80vh;
   background-image: url('../../assets/img/circuitboard.png');
 
 }
 .loginForm{
   display: flex;
   justify-content: center;
+  background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
   margin-top: 7%;
-  width: 60vh;
-  height: 50vh;
-  border: 1px solid;
-  border-radius: 10px;
+  width: 55vh;
+  height: 65vh;
+  border-radius: 30px;
+  box-shadow: 0px 0px 5px 1px #000000;
 }
+/* .mb-3{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid rgb(255, 255, 255);
+} 
+      underline input field */ 
