--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -53,11 +53,18 @@
     font-size: 10px;
   }
   /* Sidebard */
+  .sidebarContainer{
+    border-right: 1px lightgrey solid;
+    padding-top: 10%;
+  }
   .sidebarItem{
     display: flex;
     text-align: start;
     margin: 20px;
     width: 250px
+  }
+  .sidebarItem:hover{
+    font-weight: bold;
   }
   .sidebarText{
     margin-left: 10px;
