--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -21,6 +21,21 @@
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
 
 }
+.leftContainer{
+  width: 30%;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+}
+.rightContainer{
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.centerContainer{
+  width: 40%;
+}
   /* #footer {
     background-color: #2c5a96;
     text-align: center;
@@ -60,14 +75,16 @@
   .sidebarItem{
     display: flex;
     text-align: start;
-    margin: 20px;
+    padding: 10px;
     width: 250px
   }
   .sidebarItem:hover{
     font-weight: bold;
+    cursor: pointer;
+    background-color: lightgray;
   }
   .sidebarText{
-    margin-left: 10px;
+    margin-left: 10px!important;
   }
   /* Imported CSS - Sidebar */
   @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
