--- a/src/modules/applications/applications.css
+++ b/src/modules/applications/applications.css
@@ -15,12 +15,44 @@
     float: right;
 }
 
-.applicanttable{
-    display: block;
-    width:80%;
+.headerStyle{
+    /* background-color: lightblue; */
+    height: 100px;
+    width: 50%;
+    justify-content: left;
+    align-items: center;
+    display: flex;
+    margin: 40px 40px;
+    color: #135faa;
+}
+
+.applicanttitle {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.applicanttitle p{
+    width: 29%;
+    
+}
+
+.applicantData{
+    height: 50vh;
+    margin: 0px 20px;
+    padding: 30px 20px;
     background-color: #d9e8f6;
-    height: 300px;
-    width: 1200px;
-    margin: 100px 12px;
-    border-radius: 30px;
+    border-radius: 10px;
+    box-shadow: 2px 7px lightgray;
+
+} 
+.applicantData div{
+    width: 100%;
+    display: flex;
+    justify-content: center; 
+   border-bottom-style: solid;
+   border-bottom-color: #d9dbdd; 
+}
+.applicantData p{
+    width: 30%;
+    margin-top: 10px;
 }
