--- a/src/modules/leaves/style.css
+++ b/src/modules/leaves/style.css
@@ -2,6 +2,12 @@
     display: flex;
     justify-content: center;
     gap: 15%;
+    border: 1px solid grey;
+    border-radius: 20px;
+    padding: 5%;
+    height: 100%;
+    box-shadow: 1px 3px grey;
+    background-color: #D9E8F6;
 }
 .mainContainer{
     min-height: 75vh;
