--- a/src/modules/generic/style.css
+++ b/src/modules/generic/style.css
@@ -3,13 +3,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    min-height: 20vh;
+    min-height: 10vh;
+    margin-left: 2%!important;
 }
 .breadcrumbHeader{
     display: flex;
     justify-content: start;
     color: grey;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 .breadcrumbSubheader{
     display: flex;
