/settings css animations

--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -1,18 +1,2 @@
-
-$primary: #5e17eb;
-$darkPrimary: #5e17eb;
-$hover: #ccc;
-$secondary: #00b89f;
-$darkSecondary: #028170;
-$gray: #ccc;
-$white: #ffffff;;
-$warning: #cbab58;
-$danger: #f7786b;
-$textBlue: #007bff;
-$gradientPrimary: #25006D;
-$gradientSecondary: #00c4cc;
-$customerPurple: #5e17eb;
-$customerBlue: #38b6ff;
-$black: #000000;
-$background: #F9F9F9;
-$height: 8vh;
+$background-white: #f1f5fb;
+$background-blue: #d9e8f6;
