--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -14,7 +14,7 @@
   background: linear-gradient(180deg, #fff 0%, rgba(0, 128, 255, 0.64) 100%);
   margin-top: 5%;
   margin-bottom: 5%;
-  width: 55vh;
+  width: 125vh;
   height: 65vh;
   border-radius: 30px;
   box-shadow: 0px 0px 5px 1px #000000;
@@ -35,4 +35,18 @@
 .Field{
   margin-left: 25px;
   margin-right: 25px;
+}
+.leftContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.rContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
