--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -1,8 +1,6 @@
 .logo{
-    width: 50px;
-    height: 50px;
-    display: flex;
-    margin-left: 3%;
+    width: 60px;
+    height: 60px;
 }
 
 .name{
@@ -21,14 +19,13 @@
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
 
 }
-.leftContainer{
-  width: 30%;
+.left-headerContainer{
   display: flex;
   justify-self: center;
   align-items: center;
+  padding-left: 10vh;
 }
-.rightContainer{
-  width: 30%;
+.right-headerContainer{
   display: flex;
   align-items: center;
   justify-content: end;
