--- a/src/modules/applicants/style.scss
+++ b/src/modules/applicants/style.scss
@@ -1,13 +1,15 @@
 .header-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 24px;
+  width: 100%;
 }
 
 .table-container {
   margin: 20px;
   padding-block: 20px;
+  background-color: #d9e8f6;
   border-radius: 20px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 24%);
 
@@ -23,7 +25,12 @@
   cursor: pointer;
 }
 
-// view scholar
-.view-scholar {
+// view applicant
+.view-applicant {
   margin-top: 24px;
+}
+
+// add-applicant
+.add-applicant {
+  text-align: left;
 }
