--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -1,6 +1,7 @@
 .logo{
-    width: 60px;
-    height: 60px;
+    width: 20vh;
+    height: 15vh;
+    padding: 1%;
 }
 
 .name{
@@ -14,7 +15,7 @@
     display: flex;
     justify-content: start;
     width: 100%;
-    height: 8vh;
+    height: 9vh;
     /* background-color: -webkit-linear-gradient(left,#5e17eb,#25006d); */
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
 
@@ -23,7 +24,7 @@
   display: flex;
   justify-self: center;
   align-items: center;
-  padding-left: 10vh;
+  padding-left: 3%;
 }
 .right-headerContainer{
   display: flex;
@@ -251,5 +252,13 @@ input {
 }
 .headerFont:hover{
   color: white;
+  cursor: pointer;
+}
+
+.white{
+  color: white;
+}
+.white:hover{
+  color: lightgray;
   cursor: pointer;
 }
