--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -14,7 +14,7 @@
 .headerContainer{
     display: flex;
     justify-content: start;
-    width: 100%;
+    /* width: 100%; */
     height: 9vh;
     /* background-color: -webkit-linear-gradient(left,#5e17eb,#25006d); */
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
@@ -261,4 +261,9 @@ input {
 .white:hover{
   color: lightgray;
   cursor: pointer;
+}
+
+.sidebarImage{
+  height: auto!important;
+  width: 50%!important;
 }
