--- a/src/modules/frames/style.css
+++ b/src/modules/frames/style.css
@@ -3,7 +3,9 @@
     height: 15vh;
     padding: 1%;
 }
+.uscLogo{
 
+}
 .name{
   margin-left: 10px;
   margin-top: 18px;
@@ -44,16 +46,18 @@
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
   } */
   .footerContainer{
-    width: 100%;
-    height: 20vh;
-    bottom: 0;
+    max-width: 100%;
+    margin: 0;
     display: flex;
+    /* height: 20vh;
+    bottom: 0;
+    display: flex; */
     background: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);
   }
   .footerContent{
     display: flex;
-    margin-left: 25px;
-    margin-top: 25px;
+    /* margin-left: 25px;
+    margin-top: 25px; */
   }
   .details{
     margin-top: 0px;
@@ -69,6 +73,7 @@
   .sidebarContainer{
     border-right: 1px lightgrey solid;
     padding-top: 3%;
+    display: block;
   }
   .sidebarItem{
     display: flex;
@@ -83,6 +88,8 @@
   }
   .sidebarText{
     margin-left: 10px!important;
+  }
+  .sidebarStyles{
   }
   /* Imported CSS - Sidebar */
   @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
