--- a/src/modules/accounts/style.css
+++ b/src/modules/accounts/style.css
@@ -463,3 +463,13 @@ h4 {
   justify-content: center;
   gap: 10%;
 }
+
+.customSelect {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="%23000000" d="M2 0L0 2h4zm0 5L0 3h4z"/></svg>') no-repeat;
+  background-position: right .75rem center;
+  background-size: 12px 12px;
+  padding-right: 1.5rem; /* Adjust padding to make room for the arrow */
+}
