--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -7,6 +7,7 @@
   /* background-image: url('../../assets/img/usc-login.jpeg'); */
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  background-image: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);;
 }
 .loginForm{
   display: flex;
@@ -14,10 +15,10 @@
   background: linear-gradient(180deg, #fff 0%, rgba(0, 128, 255, 0.64) 100%);
   margin-top: 5%;
   margin-bottom: 5%;
-  width: 125vh;
+  /* width: 125vh; */
   height: 65vh;
-  border-radius: 30px;
-  box-shadow: 0px 0px 5px 1px #000000;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 1px #000000;
 }
 /* .mb-3{
   width: 100%;
