--- a/src/modules/applications/applications.css
+++ b/src/modules/applications/applications.css
@@ -418,3 +418,35 @@ h4 {
     text-align: left;
     font-size: 12px;
 }
+
+/* Tooltip */
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+   }
+   
+   /* Tooltip text */
+   .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%; /* Position the tooltip above the text */
+    left: 50%;
+    margin-left: -60px; /* Use half of the width to center the tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+   }
+   
+   /* Show the tooltip text when you mouse over the tooltip container */
+   .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+   }
