--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  min-height: 80vh;
   /* background-image: url('../../assets/img/usc-login.jpeg'); */
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -16,7 +16,7 @@
   margin-top: 5%;
   margin-bottom: 5%;
   /* width: 125vh; */
-  height: 65vh;
+  height: auto;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #000000;
 }
@@ -62,4 +62,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.errorText{
+  padding: 1%;
+  color: red;
+  text-align: left;
+  font-size: 12px;
 }
