--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -15,7 +15,7 @@
   background: linear-gradient(180deg, #fff 0%, rgba(0, 128, 255, 0.64) 100%);
   margin-top: 5%;
   margin-bottom: 5%;
-  /* width: 125vh; */
+  width: 80vh;
   height: auto;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #000000;
