--- a/src/modules/auth/style.css
+++ b/src/modules/auth/style.css
@@ -83,3 +83,43 @@
 .underline-hover:hover {
   color: lightgray; /* Optional: change the color on hover */
 }
+
+
+.custom-modal-header {
+  /* background-color: #343a40; Update this to match your app's theme */
+  background-image: linear-gradient(180deg, #0D57A0 0%, rgba(0, 128, 255, 0.64) 100%);;
+  color: white;
+}
+
+.custom-modal-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.custom-modal-body {
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.custom-modal-footer {
+  background-color: #f8f9fa;
+}
+
+.custom-button {
+  background-color: #6c757d; /* Match with your theme */
+  color: white;
+  border: none;
+}
+
+.custom-button-primary {
+  background-color: #007bff; /* Primary color matching theme */
+  color: white;
+  border: none;
+}
+
+.custom-input {
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ced4da;
+}
